flicker issue between pops solution

--- a/src/sass/components/_searchInput.scss
+++ b/src/sass/components/_searchInput.scss
@@ -34,6 +34,9 @@
 			padding-top: 5px;
 			width: 1.25rem;
 		}
+		&:focus {
+			border: 1px solid $primary; // needed for firefox
+		}
 	}
 
 	input[type='text' i] {
